# harbour-newpipe

./: .gitignore  .gitmodules  Dockerfile  LICENSE  Makefile  README.md
.github/workflows/: ci.yaml
cpp/: Makefile  buffer.c  buffer.h  json.c  json.h  main.c
java/: compile.sh
sfos/harbour-newpipe/: CMakeLists.txt  generate.sh  harbour-newpipe.desktop  harbour-newpipe.pro
sfos/harbour-newpipe/qml/: harbour-newpipe.qml
sfos/harbour-newpipe/qml/components/: CommentItem.qml  KeyValue.qml  MediaDetails.qml  SearchDelegate.qml  SearchThumbnail.qml  StatItem.qml  VideoPlayer.qml
sfos/harbour-newpipe/qml/cover/: CoverPage.qml
sfos/harbour-newpipe/qml/pages/: ChannelPage.qml  FirstPage.qml  RepliesPage.qml  SearchPage.qml  VideoPage.qml
sfos/harbour-newpipe/rpm/: harbour-newpipe.changes.in  harbour-newpipe.changes.run.in  harbour-newpipe.spec
sfos/harbour-newpipe/src/: channelinfo.cpp  channelinfo.h  channelmodel.cpp  channelmodel.h  channeltabinfo.cpp  channeltabinfo.h  commentitem.cpp  commentitem.h  commentmodel.cpp  commentmodel.h  extractor.cpp  extractor.h  harbour-newpipe.cpp  imageprovider.cpp  imageprovider.h  invoke.cpp  invoke.h  lifetimecheck.cpp  lifetimecheck.h  linkhandlermodel.cpp  linkhandlermodel.h  listlinkhandler.cpp  listlinkhandler.h  mediainfo.cpp  mediainfo.h  page.cpp  page.h  pageref.cpp  pageref.h  searchitem.cpp  searchitem.h  searchitemchannel.cpp  searchitemchannel.h  searchitemcomment.cpp  searchitemcomment.h  searchitemplaylist.cpp  searchitemplaylist.h  searchitemstream.cpp  searchitemstream.h  searchmodel.cpp  (+3 more)
sfos/harbour-newpipe/translations/: harbour-newpipe-be.ts  harbour-newpipe-de.ts  harbour-newpipe-en.ts  harbour-newpipe-et.ts  harbour-newpipe-fi.ts  harbour-newpipe-fr.ts  harbour-newpipe-it.ts  harbour-newpipe-ru.ts  harbour-newpipe-sv.ts  harbour-newpipe.ts
sfos/serverconfig/: Dockerfile  README.md
